...
                           systemImageName: "heart",
                           color: .pink,
                           isOn: props.isInWishlist,
                           action: props.onWishlistTap)

            macButton(id: .seenlistButton,
                           text: props.isInSeenlist ? "Seen" : "Seenlist",
                           systemImageName: "eye",
                           color: .green,
                           isOn: props.isInSeenlist,
                           action: props.onSeenlistTap)

            macButton(id: .customListButton,
...
